assets/css/style.css
/*------------ Body --------------------------------------------------------*/
body{
    margin: 0;
}

/*------------ Header ------------------------------------------------------*/
.heroimage{
    background-image: url("../images/heroimage2.jpg");
    background-position: center;
    background-size: cover;
    height: 75vh;
}

.nav-container{
    display: flex;
    flex-direction: row-reverse;
    width: 100%;
    height: 11vh;
    background-color: rgb(168, 212, 194);
}

nav {
    width: 84vw;
}

nav ul {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    list-style: none;
    width: 100%;
    
}

nav ul li {
    width: 100%;
    margin-top: 10px;
    text-align: center;
    border: 2px solid rgb(0, 0, 0);         /*temporary*/
    background-color: rgb(168, 212, 194);   /*temporary*/
}

nav ul li:hover {
    border: 2px solid black;
}

nav ul li:hover a{
    color: rgb(211, 211, 211);  /*temporary*/
    text-decoration: none;
}



nav ul li a {
    text-decoration: none;
    font-size: 25px;
    font-family: sans-serif;    /*temporary*/
    color: rgb(0, 0, 0) /*temporary*/
}


.navbar-toggler {
    margin-top: 5px;
    margin-right: 5px;
    font-size: 40px;
} /* Add hover class */

.navbar-toggler-icon {
    background-color: rgba(151, 151, 151,0.4);
    border: 2px solid rgba(151, 151, 151,0.9);
    height: 1.1em;
}

.toggler-logo {
   margin-top: 4px;
    height: 10vh;
    
}

.logo {
   width: 11vw;
   height: auto;
   display: none;
}

#hero-quote-text{
    display: none;
}


/*--------------Main Content ------------------------------------------------------------*/

#home-container{
    display: flex;
    flex-direction: column;
    width: 100%;
}

#home-first-section, #home-second-section , #home-third-section  {
    background-color: rgb(177, 223, 204);   /*temporary*/
    flex:1;
    text-align: center;
    padding: 0px 25px;
}

#home-second-section {
    background-color: rgb(168, 212, 194); 

}

#home-container h1 {
    padding-top: 20px;
    font-size: 20px;
    height: 70px;
}

#home-container p {
    font-size: 15px;
}

.home-icons{
    font-size: 50px;
    padding: 40px 0px;
}

/*-------------- Footer ------------------------------------------------------------*/

.footer-container{
    display: flex;
    flex-direction: column;
    width: 100%;
    height: auto;
    padding: 20px 25px;
    background-color: rgb(221, 221, 221); /*temporary*/
}

.footer-first-section, .footer-second-section, .footer-third-section { 
    flex:1; 
    text-align: center;
}

.footer-first-section {
    margin-top: 20px;
}

.footer-second-section {
    margin: 25px 0;
}

.footer-logo{
    width: 80px;
   height: auto; 
}

.footer-third-section {
    margin-bottom: 20px;
}

.footer-third-section span {
    font-size: 20px;
}

.footer-email {
    display: inline-block;
    margin: 10px 0px;
} 


.footer-icons {
    width: 100%;
    height: auto;
}

.footer-icons .fa {
    font-size: 35px;
}

.fa-facebook-square {
    float: left;
    padding-left: 15px;
    
}

.fa-instagram {
    float: right;
    padding-right: 15px;
}


/*--------------- Media Quieries ----------------------------------------*/

@media screen and (min-width: 768px) {

/*--------- 768px Header ---------------*/

.logo{
    display: inline-block;
    width: 12vw;
    height: auto;
    margin-top: 0.2vh;
    
}

.nav-container{
    display: flex;
    flex-direction: row;
    width: 100%;
    height: 50px;
    background-color: transparent;
}

nav {
    width: 100%;
}

nav ul {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style: none;
    width: 100%;
    margin-top: 1rem;
    padding-inline-start: 0px;
}

nav ul li {
    width: 14%;
    height: 50%;
    margin-top: 4.3vh;
    text-align: center;
    border: 2px solid rgb(68, 68, 68,);
    border-radius: 15px;
    background-color: transparent;
}

nav ul li a {
    text-decoration: none;
    font-size: 2.5vw;
    font-family: sans-serif;    /*temporary*/
    color: black;            /*temporary*/
}

.toggler-logo{
    display:none;
}

#hero-quote{
    position: relative;
}

#hero-quote-text{
    display:inline-block;
    position: absolute;
    top: 52vh;
    right: 40px;
    width: 30%;
    background-color: rgba(255, 255, 255, 0.829); /*temporary*/
    border-radius: 12px;
    font-size: 2.2vw;
    text-align: center;
}

/*--------- 768px Main ------------------*/

#home-container h1 {
    font-size: 25px;
}

/*--------- 768px Footer ----------------*/

.footer-logo{
    width: 100px;
}

.footer-icons {
    width: 75%;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.footer-icons .fa {
    font-size: 40px;
}

}

@media screen and (min-width: 992px) {

/*--------- 992px Header --------------*/




/*--------- 992px Main Content --------------*/

#home-container{
    flex-direction: row;
}

/*--------- 992px Footer -----------------------*/

.footer-container{
    flex-direction: row;
}

.footer-second-section{
    position: relative;
}

.footer-logo {
    position: absolute;
    width: 130px;
   top: 50%;                            /* code sourced from freecodecamp.org */
   left: 50%;                           /* code sourced from freecodecamp.org */
   transform: translate(-50%, -50%);    /* code sourced from freecodecamp.org */
}

.footer-first-section, .footer-third-section {
    margin: 0px;
}

.footer-third-section{
    padding-top: 20px;
}

.footer-icons .fa {
    font-size: 45px;
}
    
}

@media screen and (min-width: 1200px) {

/*--------- 1200px Header ----------------------*/

    nav ul li {
    margin-top: 4.3vh;
    
}
/*--------- 1200px Main Content ----------------*/
    #home-container h1 {
    font-size: 35px;
}

/*--------- 1200px Footer ---------------------*/
.footer-icons .fa {
    font-size: 50px;
}

.footer-third-section{
    padding-top: 10px;
}

}

